<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:clickable="false"
  android:focusable="false"
  android:background="#EFEEEC"
  tools:context=".directions.presenter.DirectionsScreenPresenter"
  android:padding="5dp">

  <!-- Talkback reads the hint event if not visible -->
  <fragment
      android:id="@+id/map"
      android:name="com.google.android.gms.maps.SupportMapFragment"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_alignParentBottom="true"
      android:layout_marginTop="0dp"
      android:layout_marginBottom="0dp"
      android:contentDescription="Map on which the path is drawn!"
      android:minWidth="48dp"
      android:minHeight="48dp"
      tools:context="mm.spp.root.MapsActivity" />

  <LinearLayout
    android:id="@+id/infoLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:paddingBottom="5dp"
    >

    <AutoCompleteTextView
        android:id="@+id/destACTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/text_area"
        android:hint="@string/hintEnd"
        android:imeActionId="6"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:padding="15dp"
        android:fontFamily="@font/googlesans"
        android:paddingBottom="10dp"
        android:singleLine="true"
        android:textColor="@color/blue"
        android:textColorHint="@color/blue" />

    <!-- focusable = true instructs TalkBack to read the whole content once-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/text_area"
        android:focusable="true"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:orientation="horizontal">

      <ImageView
          android:id="@+id/distanceIV"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:labelFor="@+id/distanceIV"
          android:minWidth="48dp"
          android:minHeight="48dp"
          android:paddingStart="5dp"
          android:paddingTop="5dp"
          android:src="@drawable/loc_icon_2" />

      <TextView
          android:id="@+id/distanceTV"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:layout_weight="2"
          android:fontFamily="@font/googlesans"
          android:hint="@string/distance_hint"
          android:minWidth="48dp"
          android:minHeight="48dp"
          android:padding="5dp"
          android:paddingStart="-5dp"
          android:textAlignment="center"
          android:textColor="@color/blue"
          android:textColorHint="@color/blue"
          android:textSize="25sp" />

      <ImageView
          android:id="@+id/durationIV"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:labelFor="@+id/durationTV"
          android:minWidth="40dp"
          android:minHeight="40dp"
          android:paddingTop="5dp"
          android:paddingBottom="5dp"
          android:src="@drawable/time_ico" />

      <TextView
          android:id="@+id/durationTV"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:layout_weight="2"
          android:fontFamily="@font/googlesans"
          android:hint="@string/duration_hint"
          android:minWidth="48dp"
          android:minHeight="48dp"
          android:padding="5dp"
          android:paddingStart="-5dp"
          android:textAlignment="center"
          android:textColor="@color/blue"
          android:textColorHint="@color/blue"
          android:textSize="25sp" />
    </LinearLayout>

  </LinearLayout>


  <!-- The gravity and button size are set programatically -->
  <Button
      android:id="@+id/speechButton_directions"
      android:layout_width="96dp"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:layout_alignParentRight="true"
      android:layout_alignParentBottom="true"
      android:layout_marginTop="10dp"
      android:layout_marginEnd="10dp"
      android:layout_marginBottom="5dp"
      android:background="@drawable/text_area_2"
      android:drawableStart="@drawable/mic"
      android:drawableLeft="@drawable/mic"
      android:fontFamily="@font/googlesans"
      android:minWidth="48dp"
      android:minHeight="48dp"
      android:padding="10dp"
      android:text="@string/speechB_text"
      android:textAllCaps="false"
      android:textColor="@color/white" />

  <Button
      android:id="@+id/location"
      android:layout_width="159dp"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_alignParentRight="true"
      android:layout_alignParentBottom="true"
      android:layout_marginLeft="134dp"
      android:layout_marginRight="114dp"
      android:layout_marginBottom="5dp"
      android:background="@drawable/text_area_2"
      android:drawableStart="@drawable/location_icon"
      android:drawableLeft="@drawable/location_icon"
      android:fontFamily="@font/googlesans"
      android:minWidth="48dp"
      android:minHeight="48dp"
      android:padding="10dp"
      android:text="location "
      android:textAllCaps="false"
      android:textColor="@color/white" />

  <Button
      android:id="@+id/findPathB"
      android:layout_width="118dp"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_alignParentBottom="true"
      android:layout_marginStart="10dp"
      android:layout_marginTop="10dp"
      android:layout_marginEnd="10dp"
      android:layout_marginBottom="5dp"
      android:background="@drawable/text_area_2"
      android:drawableStart="@drawable/directions_ico"
      android:drawableLeft="@drawable/directions_ico"
      android:fontFamily="@font/googlesans"
      android:minWidth="48dp"
      android:minHeight="48dp"
      android:padding="10dp"
      android:text="@string/find_path"
      android:textAllCaps="false"
      android:textColor="@color/white" />

</RelativeLayout>
